# kicad-keyboard-footprint-generator

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
3dshapes/: CPG151101S11.step  CPG151101S11.wrl
KicadKeyboardFootprints/: layer.py  model.py  mx.py  shapes.py  types.py  util.py
kicad_keyboard_footprints/: __init__.py  file.py  layer.py  model.py  mx.py  shapes.py  types.py
scripts/: make_mx_hotswap.py  make_mx_solder.py
scripts/tools/: __init__.py  cli.py  common.py  mx.py
